[gd_scene load_steps=10 format=3 uid="uid://db7nivlb04ti7"]

[ext_resource type="Script" path="res://scripts/Credits/win_game_panel.gd" id="1_mi45n"]
[ext_resource type="Texture2D" uid="uid://1j3636wgk7ys" path="res://assets/GUI/BG/OptionsBG.png" id="2_ah4sr"]
[ext_resource type="FontFile" uid="uid://b4pp8gmrt821n" path="res://assets/GUI/Font/editundo.ttf" id="2_splnw"]
[ext_resource type="Texture2D" uid="uid://8pvqifrhcapb" path="res://assets/GUI/Buttons/Confirm/Confirm_Normal.png" id="4_vrwou"]
[ext_resource type="Texture2D" uid="uid://c3g0w4aoisdqj" path="res://assets/GUI/Buttons/Confirm/Confirm_Clicked.png" id="5_s152y"]
[ext_resource type="Texture2D" uid="uid://bdfivuws4miil" path="res://assets/GUI/Buttons/Confirm/Confirm_Hovered.png" id="6_hlxlv"]
[ext_resource type="Texture2D" uid="uid://dbkcc6evudj77" path="res://assets/GUI/Buttons/Confirm/Confirm_Disabled.png" id="7_l0jn7"]

[sub_resource type="LabelSettings" id="LabelSettings_tj8ll"]
font = ExtResource("2_splnw")
font_size = 55
font_color = Color(0.88706, 1, 0.73972, 1)

[sub_resource type="LabelSettings" id="LabelSettings_268wj"]
font = ExtResource("2_splnw")
font_size = 32

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mi45n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ah4sr")

[node name="win_title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 120.0
offset_right = 131.0
offset_bottom = 152.0
grow_horizontal = 2
text = "Congratulations!"
label_settings = SubResource("LabelSettings_tj8ll")

[node name="win_message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You've successfully built a sustainable ecosystem!
					   • Built 3+ of each building type
					   • Developed a maxed out city
					   • Kept pollution under 15%

Your province is now thriving in harmony with nature."
label_settings = SubResource("LabelSettings_268wj")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -118.0
offset_right = 100.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_vrwou")
texture_pressed = ExtResource("5_s152y")
texture_hover = ExtResource("6_hlxlv")
texture_disabled = ExtResource("7_l0jn7")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
